@@ -2,3 +2,5 @@ Adam Mateja - for great splash screen
 Michal Pena (Cyb.org) - for testing, bugfixes, debian and ubuntu package and man page
 Marin Glibic - good and helpful bugreports
 Jakub Narebski - tweaks for .spec file
+Digikam developers - Digikam source code helped me a lot with imlib2
+
