@@ -6,6 +6,7 @@ BUILT_SOURCES = moc_archiverdialog.cpp \
 		moc_cbsettings.cpp \
 		moc_comicmain.cpp \
 		moc_helpbrowser.cpp \
+		moc_imgarchiver.cpp \
 		moc_imgarchivesink.cpp \
 		moc_imgdirsink.cpp \
 		moc_imgview.cpp \
@@ -19,7 +20,7 @@ BUILT_SOURCES = moc_archiverdialog.cpp \
 
 qcomicbook_SOURCES = aboutdialog.cpp archiverdialog.cpp bookmark.cpp bookmarkmanager.cpp\
 	bookmarks.cpp cbconfigdialog.cpp cbinfo.cpp cbsettings.cpp comicmain.cpp\
-	helpbrowser.cpp history.cpp icons.cpp iconviewthumbnail.cpp imgarchivesink.cpp \
+	helpbrowser.cpp history.cpp icons.cpp iconviewthumbnail.cpp imgarchiver.cpp imgarchivesink.cpp \
 	imgdirsink.cpp imgloader.cpp imgsinkfactory.cpp imgtransform.cpp imgview.cpp\
 	imlibimage.cpp jumptopagewin.cpp listviewthumbnail.cpp main.cpp miscutil.cpp pagenumberedit.cpp\
 	pagesdirector.cpp statusbar.cpp suparchwin.cpp thumbnail.cpp\
@@ -45,6 +46,7 @@ noinst_HEADERS = aboutdialog.h \
 		 history.h \
 		 icons.h \
 		 iconviewthumbnail.h \
+		 imgarchiver.h \
 		 imgview.h \
 		 imgsinkfactory.h \
 		 imgdirsink.h \
